--- a/projects/VinesToWinesDM/src/app/app-root/app-footer/app-footer.component.html
+++ b/projects/VinesToWinesDM/src/app/app-root/app-footer/app-footer.component.html
@@ -14,15 +14,20 @@
     </div>
 
     <div class="mat-body-2">
+      <mat-icon>email</mat-icon>
+      <a href="mailto:eric@vinestowinesdm.com" target="_blank" rel="noopener">eric@vinestowinesdm.com</a>
+    </div>
+  </mat-toolbar-row>
+
+  <mat-toolbar-row fxLayout="column" fxLayoutGap="0.75em" fxLayoutAlign="center start" style="height: auto">
+    <!-- Newsletter  -->
+    <div class="mat-body-2">
       <a href="mailto:eric@vinestowinesdm.com?subject=Send%20Me%20The%20VINES%20to%20WINES%20newsletter!" target="_blank"
         rel="noopener">
         Get the Vines To Wines newsletter
       </a>
     </div>
-  </mat-toolbar-row>
 
-  <mat-toolbar-row fxLayout="column" fxLayoutAlign="center start" style="height: auto">
-    <!-- Newsletter  -->
     <a class="mat-body-2" routerLink="admin">Admin</a>
   </mat-toolbar-row>
 </mat-toolbar>
