--- a/projects/StavesChurch/src/app/ministries/ministries.component.html
+++ b/projects/StavesChurch/src/app/ministries/ministries.component.html
@@ -2,16 +2,9 @@
 
 <general-error [errors]="errors"></general-error>
 
-<section fxLayout="column" fxLayoutAlign="start center">
-  <mat-card [ngStyle.sm]="{'width': '80vw'}" [ngStyle.md]="{'width': '70vw'}" [ngStyle.lg]="{'width': '60vw'}">
+<section class="ministries" fxLayout="column" fxLayoutAlign="start center">
+  <mat-card [ngStyle.sm]="{'width': '80vw'}" [ngStyle.md]="{'width': '70vw'}" [ngStyle.gt-md]="{'width': '60vw'}">
     <mat-card-content (click)="onContentClick($event)" fxLayout="column" fxLayoutGap=".5em">
-      <!-- <section *ngIf="showOverview">
-      <p [innerHTML]="sanitizedHeader"></p>
-
-      <mat-nav-list>
-        <a mat-list-item *ngFor="let item of model.list" routerLink="{{item.name}}">{{item.name}}</a>
-      </mat-nav-list>
-    </section> -->
       <p [innerHTML]="sanitizedHeader"></p>
 
       <section *ngFor="let item of model.list">
@@ -23,11 +16,6 @@
           <div style="margin-top: 1em" [innerHTML]="item.sanitizedPurpose"></div>
         </mat-expansion-panel>
       </section>
-
-      <!-- <section *ngIf="!showOverview">
-      <h2 style="margin: 0">{{ministryName}}</h2>
-      <p [innerHTML]="sanitizedPurpose"></p>
-    </section> -->
     </mat-card-content>
     <mat-card-actions>
       <button mat-raised-button color="accent" (click)="onOKClick()">OK</button>
