--- a/projects/material-cms/material-cms-view/src/lib/photo/gallery/photo-gallery.component.scss
+++ b/projects/material-cms/material-cms-view/src/lib/photo/gallery/photo-gallery.component.scss
@@ -10,4 +10,8 @@
     background-size: 100% 100%;
     -webkit-background-size: 100% 100%;
   }
+
+  .lazy-background {
+    background-color: gray;
+  }
 }
