--- a/projects/StavesChurch/src/app/newsletter/newsletter.component.html
+++ b/projects/StavesChurch/src/app/newsletter/newsletter.component.html
@@ -1,8 +1,8 @@
-<page-title name="Caller"></page-title>
+<page-title name="Newsletter"></page-title>
 
 <general-error [errors]="errors"></general-error>
 
-<mat-card>
+<mat-card *ngIf="showContent">
   <mat-card-content fxLayout="column" fxLayoutGap="1em">
     <div *ngFor="let item of model">
       <h3><a [href]="item?.content.location" target="_blank" rel="noopener">{{item?.effectiveFrom | date}}: {{item?.content.title}}</a></h3>
