--- a/projects/VinesToWinesDM/src/app/about-us/about-us-summary.component.html
+++ b/projects/VinesToWinesDM/src/app/about-us/about-us-summary.component.html
@@ -1,4 +1,3 @@
-<p>
-  Vines To Wines is a unique winery where wine lovers can experience the fun of working in a winery by actually
-  making their own wines
-</p>
+<mat-spinner strokeWidth="4" diameter="50" *ngIf="waiting"></mat-spinner>
+
+<div *ngIf="!waiting">{{model}}</div>
