--- a/projects/material-cms/material-cms-admin/src/lib/page/list/page-list.component.html
+++ b/projects/material-cms/material-cms-admin/src/lib/page/list/page-list.component.html
@@ -33,7 +33,7 @@
       <!-- EffectiveFrom Column -->
       <ng-container matColumnDef="effectiveFrom">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Effective From </mat-header-cell>
-        <mat-cell *matCellDef="let row"> {{row.effectiveFrom | date:'shortDate'}} </mat-cell>
+        <mat-cell *matCellDef="let row"> {{row.effectiveFrom | date:'short'}} </mat-cell>
       </ng-container>
 
       <!-- Status Column -->
