--- a/projects/StavesChurch/src/app/ministries/ministries.component.html
+++ b/projects/StavesChurch/src/app/ministries/ministries.component.html
@@ -8,7 +8,7 @@
       <p [innerHTML]="sanitizedHeader"></p>
 
       <section *ngFor="let item of model.list">
-        <mat-expansion-panel>
+        <mat-expansion-panel [id]="item.id" (afterExpand)="afterExpand(item.id)">
           <mat-expansion-panel-header>
             {{item.name}}
           </mat-expansion-panel-header>
