--- a/projects/RedditReader/src/app/listing/listing.component.html
+++ b/projects/RedditReader/src/app/listing/listing.component.html
@@ -3,7 +3,9 @@
   <mat-card *ngFor="let listing of vm">
     <mat-card-header>
       <mat-card-title>{{listing.title}}</mat-card-title>
-      <mat-card-subtitle>{{listing.author}}</mat-card-subtitle>
+      <mat-card-subtitle>
+        r/<span [innerText]="listing.subreddit"></span>
+      </mat-card-subtitle>
     </mat-card-header>
     <mat-card-content *ngIf="listing.isText">
       <p [innerHTML]="listing.text"></p>
@@ -11,9 +13,20 @@
     <mat-card-content *ngIf="listing.isImage">
       <img mat-card-image [src]="listing.thumbnail">
     </mat-card-content>
+    <mat-card-content *ngIf="listing.isVideo">
+
+      <video
+        poster="https://external-preview.redd.it/LHQ1EmJdcBg2ivpjgikePTV1rj4IH7N89dgN86kkYq4.png?width=320&amp;crop=smart&amp;format=pjpg&amp;auto=webp&amp;s=c65358b4bfa76930bc5aeaf3be9f070aa8f2dc62"
+        loop="" preload="auto" autoplay="" controls="">
+        <source src="https://v.redd.it/b59jahq7o5u31/HLSPlaylist.m3u8" type="application/vnd.apple.mpegURL">
+      </video>
+
+      <video autoplay preload="auto" mat-card-image [poster]="listing.thumbnail" controls="">
+        <source [src]="listing.videoSrc" type="application/vnd.apple.mpegURL">
+      </video>
+    </mat-card-content>
     <mat-card-actions>
       <button mat-button>Ok</button>
     </mat-card-actions>
   </mat-card>
-
 </div>
