--- a/projects/RedditReader/src/app/listing/listing.component.html
+++ b/projects/RedditReader/src/app/listing/listing.component.html
@@ -11,9 +11,10 @@
     <video *ngIf="listing.hasVideo" mat-card-image controls="" muted="" [poster]="listing.thumbnail" preload="none">
       <source *ngFor="let videoSrc of listing.videoSrcs" [src]="videoSrc">
     </video>
+    <p *ngIf="listing.hasEmbed" [innerHTML]="listing.embed"></p>
     <mat-card-content *ngIf="listing.hasText">
-      <p #post style="overflow: hidden;" [ngStyle]="{'max-height': listing.stickied?'50vh':'80vh'}"
-        [ngClass]="{'masked': post.scrollHeight > post.clientHeight}" [innerHTML]="listing.text"></p>
+      <p #post style="overflow: hidden; max-height: 60vh;" [ngClass]="{'masked': post.scrollHeight > post.clientHeight}"
+        [innerHTML]="listing.text"></p>
     </mat-card-content>
     <mat-card-actions>
       <button mat-icon-button aria-label="Share">
