--- a/projects/RedditReader/src/app/listing/listing.component.scss
+++ b/projects/RedditReader/src/app/listing/listing.component.scss
@@ -3,3 +3,8 @@
   -webkit-mask-image: linear-gradient(180deg,#000 60%,transparent);
   mask-image: linear-gradient(180deg,#000 60%,transparent);
 }
+
+iframe {
+  width: 100% !important;
+  height: 100% !important;
+}
