--- a/projects/RedditReader/src/app/homepage/homepage.component.html
+++ b/projects/RedditReader/src/app/homepage/homepage.component.html
@@ -1,17 +1,1 @@
-<!-- <div fxLayout="column" fxLayoutAlign="center stretch" fxLayoutGap="1rem">
-
-  <mat-card *ngFor="let listing of thing?.data?.children">
-    <mat-card-header>
-      <mat-card-title>{{listing.data.title}}</mat-card-title>
-      <mat-card-subtitle>{{listing.data.author}}</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <p [innerText]="listing.data.selftext"></p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>Ok</button>
-    </mat-card-actions>
-  </mat-card>
-
-</div>
- -->
+<rr-subreddit [subreddit]="subreddit"></rr-subreddit>
