--- a/projects/RedditReader/src/app/listing/subreddit/subreddit.component.html
+++ b/projects/RedditReader/src/app/listing/subreddit/subreddit.component.html
@@ -6,12 +6,19 @@
   <section *ngIf="vm.hasPosts">
 
     <div fxLayout="column" fxLayoutAlign="center stretch" fxLayoutGap="1rem">
+      <mat-card>
+        <mat-card-actions>
+          <button mat-raised-button (click)="next(vm.last, vm.modhash)">Next</button>
+          <button mat-raised-button (click)="prev(vm.first, vm.modhash)">Prev</button>
+        </mat-card-actions>
+      </mat-card>
+
       <rr-post *ngFor="let listing of vm.children" [post]="listing"></rr-post>
 
       <mat-card>
         <mat-card-actions>
-          <button mat-raised-button (click)="next()">Next</button>
-          <button mat-raised-button (click)="prev()">Prev</button>
+          <button mat-raised-button (click)="next(vm.last, vm.modhash)">Next</button>
+          <button mat-raised-button (click)="prev(vm.first, vm.modhash)">Prev</button>
         </mat-card-actions>
       </mat-card>
     </div>
