--- a/projects/RedditReader/src/app/listing/subreddit/subreddit.component.html
+++ b/projects/RedditReader/src/app/listing/subreddit/subreddit.component.html
@@ -8,9 +8,7 @@
     <div fxLayout="column" fxLayoutAlign="center stretch" fxLayoutGap="1rem">
       <mat-card>
         <mat-card-actions>
-          <a mat-raised-button [routerLink]="['/r', subreddit]" [queryParams]="{after: vm.last}">Next</a>
-          <button mat-raised-button (click)="next(vm.last, vm.modhash)">Next</button>
-          <button mat-raised-button (click)="prev(vm.first, vm.modhash)">Prev</button>
+          <a mat-raised-button [routerLink]="['/r', subreddit]" [queryParams]="{after: vm.after, modhash: vm.modhash}">Next</a>
         </mat-card-actions>
       </mat-card>
 
@@ -18,8 +16,7 @@
 
       <mat-card>
         <mat-card-actions>
-          <button mat-raised-button (click)="next(vm.last, vm.modhash)">Next</button>
-          <button mat-raised-button (click)="prev(vm.first, vm.modhash)">Prev</button>
+          <a mat-raised-button [routerLink]="['/r', subreddit]" [queryParams]="{after: vm.after, modhash: vm.modhash}">Next</a>
         </mat-card-actions>
       </mat-card>
     </div>
