--- a/projects/RedditReader/src/app/app-root/app-root.component.html
+++ b/projects/RedditReader/src/app/app-root/app-root.component.html
@@ -3,7 +3,7 @@
 <section fxLayout="column" style="min-height: 100vh;">
   <mat-toolbar color="primary">
     <span fxFlex="grow">
-      Reddit Reader
+      Reddit Reader <span style="font-size: xx-small;">{{ver}}</span>
     </span>
 
     <button mat-icon-button [matMenuTriggerFor]="menu">
