--- a/projects/DailySpendLimit/src/app/app-root/app-root.component.html
+++ b/projects/DailySpendLimit/src/app/app-root/app-root.component.html
@@ -22,6 +22,10 @@
         <mat-icon>settings</mat-icon>
         <span>Setup</span>
       </button>
+      <div mat-menu-item style="font-size: xx-small">
+        <mat-icon>info</mat-icon>
+        {{ver}}
+      </div>
     </mat-menu>
   </mat-toolbar>
 
