--- a/projects/RedditReader/src/app/app-root/app-root.component.html
+++ b/projects/RedditReader/src/app/app-root/app-root.component.html
@@ -19,7 +19,9 @@
         <span>Setup</span>
       </button>
       <div mat-menu-item style="font-size: xx-small">
-        {{ver}}
+        {{buildDate}}
+        <br>
+        {{buildTime}}
       </div>
     </mat-menu>
   </mat-toolbar>
