--- a/projects/RedditReader/src/app/app-root/app-root.component.html
+++ b/projects/RedditReader/src/app/app-root/app-root.component.html
@@ -19,9 +19,7 @@
         <span>Setup</span>
       </button>
       <div mat-menu-item style="font-size: xx-small">
-        {{buildDate}}
-        <br>
-        {{buildTime}}
+        {{ver}}
       </div>
     </mat-menu>
   </mat-toolbar>
