--- a/projects/RedditReader/src/app/app-root/app-root.component.html
+++ b/projects/RedditReader/src/app/app-root/app-root.component.html
@@ -18,8 +18,10 @@
         <mat-icon>settings</mat-icon>
         <span>Setup</span>
       </button>
-      <div mat-menu-item style="font-size: xx-small">
-        {{ver}}
+      <div mat-menu-item style="line-height: 28px;">
+        {{buildDate}}
+        <br>
+        {{buildTime}}
       </div>
     </mat-menu>
   </mat-toolbar>
