--- a/projects/RedditReader/src/app/listing/subreddit/subreddit.component.html
+++ b/projects/RedditReader/src/app/listing/subreddit/subreddit.component.html
@@ -45,7 +45,13 @@
 <ng-template #newSubredditDialog>
   <h2 mat-dialog-title>Change Subreddit</h2>
   <mat-dialog-content>
-      <input-text label="r/" (modelChange)="newSubreddit = $event" maxlength="256"></input-text>
+    <mat-form-field appearance="standard" style="width: 100%">
+      <mat-label>r/</mat-label>
+      <!-- <input type="text" maxlength="256" matInput #newSubredditInp [(ngModel)]="newSubreddit"
+        (input)="onNewSubredditInput(newSubredditInp.value)" (change)="onSubmit()"> -->
+      <input type="text" maxlength="256" matInput #newSubredditInp [(ngModel)]="newSubreddit" (change)="onSubmit()">
+      <mat-hint align="end">{{newSubredditInp.value.length}} / 256</mat-hint>
+    </mat-form-field>
   </mat-dialog-content>
   <mat-dialog-actions>
     <button mat-button [mat-dialog-close]="true">Change</button>
