--- a/projects/RedditReader/src/app/listing/post/post.component.scss
+++ b/projects/RedditReader/src/app/listing/post/post.component.scss
@@ -2,3 +2,7 @@
   -webkit-mask-image: linear-gradient(180deg,#000 60%,transparent);
   mask-image: linear-gradient(180deg,#000 60%,transparent);
 }
+
+.mat-card-title {
+  line-height: 1.5em;
+}
