--- a/projects/RedditReader/src/styles.scss
+++ b/projects/RedditReader/src/styles.scss
@@ -4,8 +4,8 @@
 // Define a custom typography config that overrides the font-family as well as the
 // `headlines` and `body-1` levels.
 $custom-typography: mat-typography-config(
-  $body-1: mat-typography-level(28px, 37px, 400),
-  $body-2: mat-typography-level(28px, 37px, 500)
+  $body-1: mat-typography-level(2.5vh, 1.5em, 400),
+  $body-2: mat-typography-level(2.5vh, 1.5em, 500)
 );
 
 // Include the common styles for Angular Material. We include this here so that you only
