--- a/projects/RedditReader/src/app/app-root/app-root.component.html
+++ b/projects/RedditReader/src/app/app-root/app-root.component.html
@@ -16,7 +16,7 @@
         <mat-icon>settings</mat-icon>
         <span>Setup</span>
       </button> -->
-      <div mat-menu-item style="line-height: 28px;">
+      <div mat-menu-item style="line-height: 1.4em;">
         {{buildDate}}
         <br>
         {{buildTime}}
